--- a/index.html
+++ b/index.html
@@ -3,37 +3,25 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Мы продаем обувь, ботинок, туфель Барука в Минске с доставкой по всем городам Беларуси">
+  <meta name="description" content="Мы продаем обувь, ботинок, туфель Барука в Минске и Беларуси">
   <meta name="keywords" content="Купить обувь Барука, ботинок, туфель  в Минске и Беларуси">
   <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Обувь (ботинок, туфель) Барука в Минске и Беларуси - послеоперационная ортопедическая обувь</title>
-
-  <link href="css/normalize.css" rel="stylesheet">
-
-  <!-- Bootstrap -->
-  <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="css/font-awesome.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <title>Купить обувь (ботинок, туфель) Барука в Минске и Беларуси - послеоперационная ортопедическая обувь</title>
+  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/adaptive.css" rel="stylesheet">
+  <link href="css/style2.min.css" rel="stylesheet">
 </head>
 
 <body>
-
   <header>
     <nav class="navbar navbar-default">
       <div class="container">
         <div class="container-fluid">
-          <!-- Brand and toggle get grouped for better mobile display -->
           <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
             <span class="sr-only">Toggle navigation</span>
@@ -43,7 +31,6 @@
           </button>
             <a class="navbar-brand logo" href="index.html"><img src="img/logo-w.png" alt=""/></a>
           </div>
-          <!-- Collect the nav links, forms, and other content for toggling -->
           <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav menu">
               <li class="open-menu"><a href="#">Ассортимент<span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span></a>
@@ -61,40 +48,24 @@
               </li>
               <li><a href="sale.html">Купить</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right icons">
-
-              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-
-            </ul>
-
           </div>
-          <!-- /.navbar-collapse -->
         </div>
-        <!-- /.container-fluid -->
       </div>
     </nav>
   </header>
-
   <section class="slider">
     <div class="carousel-header">
       <div class="container">
         <h1>Обувь, ботинок, туфель барука - послеоперационная ортопедическая обувь</h1>
       </div>
     </div>
-
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-      <!-- Indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
         <li data-target="#myCarousel" data-slide-to="1"></li>
         <li data-target="#myCarousel" data-slide-to="2"></li>
         <li data-target="#myCarousel" data-slide-to="3"></li>
       </ol>
-
-      <!-- Wrapper for slides -->
       <div class="carousel-inner" role="listbox">
         <div class="item active">
           <img src="img/botinok-1.jpg" alt="Chania">
@@ -102,21 +73,18 @@
             <h3>Ботинок Барука для разгрузки передней части стопы</h3>
           </div>
         </div>
-
         <div class="item">
           <img src="img/botinok-2.jpg" alt="Chania">
           <div class="carousel-caption">
             <h3>Ботинок Барука для разгрузки передней части стопы</h3>
           </div>
         </div>
-
         <div class="item">
           <img src="img/botinok-3.jpg" alt="Flower">
           <div class="carousel-caption">
             <h3>Ботинок Барука для разгрузки задней части стопы</h3>
           </div>
         </div>
-
         <div class="item">
           <img src="img/botinok-4.jpg" alt="Flower">
           <div class="carousel-caption">
@@ -124,19 +92,16 @@
           </div>
         </div>
       </div>
-
-      <!-- Left and right controls -->
       <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
       <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </section>
-
   <main class="container">
     <section class="theory">
       <div class="section-title">
@@ -209,7 +174,6 @@
             </div>
           </div>
         </article>
-
         <article class="row-theory clearfix">
           <h4 class="container">
           <a href="baruka-heel.html">
@@ -242,12 +206,10 @@
         </article>
       </div>
     </section>
-
     <section class="step">
       <div class="section-title">
         <h3 class="name-section"><a>Как купить обувь Барука?</a></h3>
       </div>
-
       <div class="row">
         <div class="ledder hidden-xs"></div>
         <div class="row-step">
@@ -262,9 +224,7 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6"></div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row-step">
           <div class="col-lg-6 col-md-6 col-sm-6"></div>
           <div class="col-lg-6 col-md-6 col-sm-6 text-right gp-step gp-step-left gp-step-2">
@@ -276,9 +236,7 @@
             <div class="step-number-img-right">2</div>
           </div>
         </div>
-
         <div class="clearfix"></div>
-
         <div class="row-step">
           <div class="col-lg-6 col-md-6 col-sm-6 gp-step gp-step-right gp-step-3">
             <em>Шаг третий</em>
@@ -290,13 +248,9 @@
           </div>
           <div class="col-lg-6 col-md-6 col-sm-6"></div>
         </div>
-
         <div class="clearfix"></div>
-
       </div>
-
     </section>
-
     <section class="assortment">
       <div class="section-title">
         <h3 class="name-section">Ассортимент</h3>
@@ -312,7 +266,7 @@
           </a>
           </article>
           <div class="price">
-            Стоимость: 105 <span>бел.руб.</span>
+            Стоимость: 99 <span>бел.руб.</span>
           </div>
           <div class="wrap-btn">
             <div class="btn-buy">
@@ -320,7 +274,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <div class="card-assortment-title">
             <h2><a href="baruka-heel.html">Обувь Барука для разгрузки заднего отдела стопы</a></h2>
@@ -339,7 +292,6 @@
             </div>
           </div>
         </div>
-
         <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
           <div class="card-assortment-title">
             <h2><a href="orliman.html">Обувь Orliman для разгрузки переднего отдела стопы</a></h2>
@@ -360,20 +312,19 @@
         </div>
       </div>
     </section>
-
     <section class="reviews">
       <div class="section-title">
         <h3 class="name-section">Отзывы клиентов</h3>
       </div>
       <div class="row clearfix">
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reviews-item">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-11 reviews-item">
           <p class="reviews-item-title">Наталья Глушцова</p>
           <p>
             Заказала ботинок барука в предверии операции по удалению косточек. Доставили в срок и по указанной цене. Приятный молодой человек вежливо все объяснил при консультации.
           </p>
           <span>Город: Минск</span>
         </div>
-        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 reviews-item">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-11 reviews-item">
           <p class="reviews-item-title">Вероника Глинич</p>
           <p>
             Заказала два ботинка для разгрузки передней части стопы. Получила небольшую скидку (но это секрет:), просили не рассказывать). Все доставили вовремя, как и обещали.
@@ -381,12 +332,10 @@
           <span>Город: Минск</span>
         </div>
       </div>
-
       <p>
         * Хотите оставить свой отзыв? Воспользуйтесь формой обратной связи ниже.
       </p>
     </section>
-
     <section class="feedback">
       <div class="section-title">
         <h3 class="name-section"><a>Остались вопросы?</a></h3>
@@ -405,18 +354,18 @@
             <div class="row">
               <div class="form-feedback-row clearfix">
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                  <input class="input-name" type="text" name="name" autocomplete="on" required placeholder="Ваше имя *">
+                  <input class="input-text" type="text" name="name" autocomplete="on" required placeholder="Ваше имя *">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                  <input class="input-name" type="tel" name="tel" required placeholder="Ваш телефон (с кодом оператора) *">
+                  <input class="input-text" type="tel" name="tel" required placeholder="Ваш телефон (с кодом оператора) *">
                 </div>
               </div>
               <div class="form-feedback-row clearfix">
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                  <input class="input-name" type="email" name="email" autocomplete="on" placeholder="Ваш e-mail">
+                  <input class="input-text" type="email" name="email" autocomplete="on" placeholder="Ваш e-mail">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-6">
-                  <input class="input-name" type="text" name="textTitle" autocomplete="on" placeholder="Тема письма">
+                  <input class="input-text" type="text" name="textTitle" autocomplete="on" placeholder="Тема письма">
                 </div>
               </div>
               <div class="form-feedback-row clearfix">
@@ -438,15 +387,17 @@
       </div>
     </section>
   </main>
-
   <footer>
     <div class="container">
       <div class="row cleafix">
-        <div class="col-lg-6"><a class="navbar-brand logo logo-footer" href="#"><img src="img/logo-w.png" alt=""/></a></div>
-        <div class="col-lg-6 social">
-          <div class="social-title">Не жалейте, ставьте лайк! :)</div>
+        <div class="col-lg-6 col-md-6 col-sm-4 hidden-xs">
+          <a class="navbar-brand logo logo-footer">
+            <img src="img/logo-w.png" alt="logo"/>
+          </a>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-8 col-xs-11 social">
+          <span class="social-title">Не жалейте, ставьте лайк! :)</span>
           <div class="social-share">
-
             <script type="text/javascript">
               (function() {
                 if (window.pluso)
@@ -466,40 +417,30 @@
               })();
             </script>
             <div class="pluso" data-background="transparent" data-options="medium,square,line,horizontal,counter,theme=05" data-services="vkontakte,odnoklassniki,facebook,twitter,google"></div>
-
-
           </div>
         </div>
       </div>
       <hr />
-
     </div>
     <div class="copywrite">
       <i class="glyphicon glyphicon-copyright-mark"></i> 2017 Все права защищены. При копировании материалов активная ссылка на сайт обязательна
-
       <!--LiveInternet counter-->
       <script type="text/javascript">
         document.write("<a href='//www.liveinternet.ru/click' " +
-          "target=_blank><img src='//counter.yadro.ru/hit?t52.6;r" +
+          "target=_blank><img src='//counter.yadro.ru/hit?t44.11;r" +
           escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
             ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
               screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
           ";" + Math.random() +
-          "' alt='' title='LiveInternet: показано число просмотров и" +
-          " посетителей за 24 часа' " +
-          "border='0' width='88' height='31'><\/a>")
+          "' alt='' title='LiveInternet' " +
+          "border='0' width='31' height='31'><\/a>")
       </script>
       <!--/LiveInternet-->
-
     </div>
   </footer>
-
-
   <script src="js/script.js"></script>
-  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-  <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="https://www.google.com/recaptcha/api.js"></script>
   <script>
     (function(i, s, o, g, r, a, m) {
@@ -513,7 +454,6 @@
       a.src = g;
       m.parentNode.insertBefore(a, m)
     })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
     ga('create', 'UA-58741876-5', 'auto');
     ga('send', 'pageview');
   </script>
