--- a/message.html
+++ b/message.html
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Купить обувь (ботинок) Барука в Минске, Беларуси, Гомеле, Могилеве, Бресте, Гродно, Витебске. Обувь ортопедическая послеоперационная</title>
 
-    <link href="css/normalize.css" rel="stylesheet">
+<head>
+  <meta charset="utf-8">
+  <link href="img/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <title>Ваше сообщение принято, спасибо!</title>
 
-    <!-- Bootstrap -->
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <link href="css/style2.min.css" rel="stylesheet">
+</head>
 
-    <!-- подключение CSS файла Fancybox -->
-    <link rel="stylesheet" type="text/css" href="css/jquery.fancybox.min.css">
-
-
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/adaptive.css" rel="stylesheet">
-  </head>
-  <body>
+<body>
 
   <header class="header-inner">
     <nav class="navbar navbar-default">
@@ -63,17 +56,10 @@
               </li>
               <li><a href="sale.html">Купить</a></li>
             </ul>
-            <ul class="nav navbar-nav navbar-right icons">
-
-              <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-odnoklassniki" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-vk" aria-hidden="true"></i></a></li>
-              <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-
-            </ul>
-
-          </div><!-- /.navbar-collapse -->
-        </div><!-- /.container-fluid -->
+          </div>
+          <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
       </div>
     </nav>
   </header>
@@ -107,7 +93,7 @@
             </a>
           </article>
           <div class="price">
-            Стоимость: 105 <span>бел.руб.</span>
+            Стоимость: 99 <span>бел.руб.</span>
           </div>
           <div class="wrap-btn">
             <div class="btn-buy">
@@ -159,71 +145,86 @@
 
   </main>
 
-<footer>
-  <div class="container">
-    <div class="row cleafix">
-      <div class="col-lg-6"><a class="navbar-brand logo logo-footer" href="index.html"><img src="img/logo-w.png" alt=""/></a></div>
-      <div class="col-lg-6 social">
-        <div class="social-title">Не жалейте, ставьте лайк! :)</div>
-        <div class="social-share">
-
-            <script type="text/javascript">(function() {
-              if (window.pluso)if (typeof window.pluso.start == "function") return;
-              if (window.ifpluso==undefined) { window.ifpluso = 1;
-                var d = document, s = d.createElement('script'), g = 'getElementsByTagName';
-                s.type = 'text/javascript'; s.charset='UTF-8'; s.async = true;
-                s.src = ('https:' == window.location.protocol ? 'https' : 'http')  + '://share.pluso.ru/pluso-like.js';
-                var h=d[g]('body')[0];
-                h.appendChild(s);
-              }})();</script>
+  <footer>
+    <div class="container">
+      <div class="row cleafix">
+        <div class="col-lg-6 col-md-6 col-sm-4 hidden-xs">
+          <a class="navbar-brand logo logo-footer" href="index.html">
+            <img src="img/logo-w.png" alt="logo"/>
+          </a>
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-8 col-xs-11 social">
+          <span class="social-title">Не жалейте, ставьте лайк! :)</span>
+          <div class="social-share">
+            <script type="text/javascript">
+              (function() {
+                if (window.pluso)
+                  if (typeof window.pluso.start == "function") return;
+                if (window.ifpluso == undefined) {
+                  window.ifpluso = 1;
+                  var d = document,
+                    s = d.createElement('script'),
+                    g = 'getElementsByTagName';
+                  s.type = 'text/javascript';
+                  s.charset = 'UTF-8';
+                  s.async = true;
+                  s.src = ('https:' == window.location.protocol ? 'https' : 'http') + '://share.pluso.ru/pluso-like.js';
+                  var h = d[g]('body')[0];
+                  h.appendChild(s);
+                }
+              })();
+            </script>
             <div class="pluso" data-background="transparent" data-options="medium,square,line,horizontal,counter,theme=05" data-services="vkontakte,odnoklassniki,facebook,twitter,google"></div>
-
-
+          </div>
         </div>
       </div>
+      <hr />
     </div>
-    <hr />
-
-  </div>
-  <div class="copywrite">
-    <i class="glyphicon glyphicon-copyright-mark"></i> 2017 Все права защищены. При копировании материалов активная ссылка на сайт обязательна
-
-    <!--LiveInternet counter--><script type="text/javascript">
-document.write("<a href='//www.liveinternet.ru/click' "+
-"target=_blank><img src='//counter.yadro.ru/hit?t52.6;r"+
-escape(document.referrer)+((typeof(screen)=="undefined")?"":
-";s"+screen.width+"*"+screen.height+"*"+(screen.colorDepth?
-screen.colorDepth:screen.pixelDepth))+";u"+escape(document.URL)+
-";"+Math.random()+
-"' alt='' title='LiveInternet: показано число просмотров и"+
-" посетителей за 24 часа' "+
-"border='0' width='88' height='31'><\/a>")
-</script><!--/LiveInternet-->
-
-  </div>
-</footer>
+    <div class="copywrite">
+      <i class="glyphicon glyphicon-copyright-mark"></i> 2017 Все права защищены. При копировании материалов активная ссылка на сайт обязательна
+      <!--LiveInternet counter-->
+      <script type="text/javascript">
+        document.write("<a href='//www.liveinternet.ru/click' " +
+          "target=_blank><img src='//counter.yadro.ru/hit?t44.11;r" +
+          escape(document.referrer) + ((typeof(screen) == "undefined") ? "" :
+            ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ?
+              screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) +
+          ";" + Math.random() +
+          "' alt='' title='LiveInternet' " +
+          "border='0' width='31' height='31'><\/a>")
+      </script>
+      <!--/LiveInternet-->
+    </div>
+  </footer>
 
 
-    <script src="js/script.js"></script>
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="js/bootstrap.js"></script>
+  <script src="js/script.js"></script>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js"></script>
 
-    <script src="https://www.google.com/recaptcha/api.js"></script>
+  <script src="https://www.google.com/recaptcha/api.js"></script>
 
-    <script src="js/jquery.fancybox.min.js"></script>
+  <script src="js/jquery.fancybox.min.js"></script>
 
-	<script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-	  ga('create', 'UA-58741876-5', 'auto');
-	  ga('send', 'pageview');
+    ga('create', 'UA-58741876-5', 'auto');
+    ga('send', 'pageview');
+  </script>
 
-	</script>
+</body>
 
-  </body>
 </html>
